<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ValidationFormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/menu_section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Data Diri"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/acme"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/national_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:helperText="Required and should be 16 characters"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/menu_section1"
            tools:layout_editor_absoluteX="140dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:fontFamily="@font/acme"
                android:inputType="number"
                android:hint="@string/reg_national_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:helperText="Optional or Should be contains only characters"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/national_id"
            tools:layout_editor_absoluteX="238dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:fontFamily="@font/acme"
                android:inputType="text"
                android:hint="@string/reg_full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:helperText="Required and should be at least 8 Characters"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/full_name"
            tools:layout_editor_absoluteX="238dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:inputType="number"
                android:hint="@string/reg_acc_no" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/spinner_background"
            android:entries="@array/array_educational"
            android:fontFamily="@font/acme"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@+id/account_no"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_filed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Required field"
            android:layout_marginStart="5sp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/spinner_education"
            tools:layout_editor_absoluteX="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:helperText="Required filed"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_filed"
            tools:layout_editor_absoluteX="238dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"

                android:inputType="number"
                android:focusable="false"
                android:drawableRight="@drawable/ic_date_picker"
                android:hint="@string/reg_dob" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:minHeight="50dp"
            android:enabled="false"
            android:text="Submit"
            app:layout_constraintTop_toBottomOf="@id/dateOfBirth"
            tools:layout_editor_absoluteX="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>